<resources>
    <string name="app_name">Drive2Study</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_forgot_pass">Forgot your password?</string>
    <string name="login_dashes_line">-------------------------------------------------</string>
    <string name="login_not_your_email">Not your email?</string>
    <string name="login_password">Password</string>
    <string name="login_facebook">     Connect With Facebook</string>
    <string name="login_sign_in_or_register">Sign-in or register to start</string>
    <string name="login_or_email">----------------- Or use email -----------------</string>
    <string name="login_email">Email Address</string>
    <string name="login_con_with_email">Continue With Email</string>
    <string name="register_create_account">Create your account</string>
    <string name="register_join">Join</string>
    <string name="register_empty_or_null">Please fill all the fields</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_study">Study…</string>
    <string name="register_password">Password</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_marker">Map</string>
    <string name="nav_drive">Drive</string>
    <string name="nav_ride">Ride</string>
    <string name="nav_chat">Chat</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="toolbar_my_profile">My Profile</string>
    <string name="toolbar_logout">Logout</string>
    <string name="profile_edit_profile">Edit profile</string>
    <string name="profile_label_learning">Learning:</string>
    <string name="profile_label_days">Days in college:</string>
    <string name="edit_profile_title">Edit Your Profile</string>
    <string name="edit_profile_avatar_change">Change Profile Photo</string>
    <string name="edit_profile_save_changes">Save</string>
    <string name="edit_profile_choose_days_label">Choose the days you are in college:</string>
    <string name="edit_profile_days_sunday">Sunday</string>
    <string name="edit_profile_days_monday">Monday</string>
    <string name="edit_profile_days_tuesday">Tuesday</string>
    <string name="edit_profile_days_wednesday">Wednesday</string>
    <string name="edit_profile_days_thursday">Thursday</string>
    <string name="edit_profile_days_friday">Friday</string>
    <string name="edit_profile_days_saturday">Saturday</string>
    <string name="login_screen_valid_email">Please enter valid email address</string>
    <string name="forgot_password_title">Recover Your Password</string>
    <string name="lost_password_send_code_to">Send password reset code to:</string>
    <string name="lost_password_send_code">Send Now</string>
    <string name="lost_password_dashes_or">----------------------- Or ----------------------</string>
    <string name="lost_password_try_again">Try sign-in again</string>
    <string name="add_dialog_popup_text">Would you like to add your self into the list? Please fill in an address if you would like other location than yours.</string>
    <string name="add_dialog_popup_address">Address…</string>
    <string name="add_dialog_popup_yes">Add me to list</string>
    <string name="exit_popup_txt">Would you like to exit?</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
</resources>
