<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">


    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="98dp"
        android:layout_marginStart="98dp"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_study" />

    <EditText
        android:id="@+id/et_study"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="98dp"
        android:layout_marginStart="98dp"
        android:ems="10"
        android:hint="@string/register_study"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name" />

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="98dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/register_first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn_not_your_email" />

    <Button
        android:id="@+id/register_btn_not_your_email"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="3dp"
        android:background="@android:color/transparent"
        android:text="@string/login_not_your_email"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_username_register" />

    <TextView
        android:id="@+id/text_username_register"
        android:layout_width="290dp"
        android:layout_height="25dp"
        android:layout_marginEnd="47dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="User's Email" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:text="@string/login_dashes_line"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="127dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="80dp"
        android:text="@string/register_create_account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="98dp"
        android:layout_marginStart="98dp"
        android:ems="10"
        android:hint="@string/register_last_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

    <Button
        android:id="@+id/btn_join"
        android:layout_width="239dp"
        android:layout_height="32dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/green_button_background"
        android:text="@string/register_join"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_empty_fields" />

    <TextView
        android:id="@+id/txt_empty_fields"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="59dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/register_empty_or_null"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="15sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_password" />

</android.support.constraint.ConstraintLayout>