<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/text_dashes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="25dp"
        android:text="@string/login_dashes_line"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="317dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="false"
        android:cropToPadding="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="239dp"
        android:layout_height="31dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/facebook_signin"
        android:text="@string/login_facebook"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_signin" />

    <TextView
        android:id="@+id/text_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="110dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="13dp"
        android:text="@string/login_sign_in_or_register"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dashes" />

    <TextView
        android:id="@+id/text_use_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="46dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="50dp"
        android:text="@string/login_or_email"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_facebook" />

    <EditText
        android:id="@+id/et_user_email"
        android:layout_width="224dp"
        android:layout_height="46dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textWebEmailAddress"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_use_email" />

    <Button
        android:id="@+id/btn_email_login"
        android:layout_width="239dp"
        android:layout_height="32dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/green_button_background"
        android:text="@string/login_con_with_email"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_email" />

</android.support.constraint.ConstraintLayout>