<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <Button
        android:id="@+id/forgot_pass_btn_try_signin_again"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginEnd="141dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/lost_password_try_again"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_dashes_or_txt" />

    <TextView
        android:id="@+id/forgot_password_text_username"
        android:layout_width="290dp"
        android:layout_height="25dp"
        android:layout_marginEnd="47dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="15dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_send_code_to_txt"
        tools:text="User's Email" />

    <TextView
        android:id="@+id/forgot_password_title_txt"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="50dp"
        android:text="@string/forgot_password_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_password_dashes_or_txt"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginEnd="46dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="55dp"
        android:text="@string/lost_password_dashes_or"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_reset_pass_code" />

    <TextView
        android:id="@+id/forgot_password_dashes_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:text="@string/login_dashes_line"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_title_txt" />

    <ImageView
        android:id="@+id/img_mail_lost_pass"
        android:layout_width="84dp"
        android:layout_height="67dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_dashes_txt"
        app:srcCompat="@drawable/mail" />

    <TextView
        android:id="@+id/forgot_password_send_code_to_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="103dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="25dp"
        android:text="@string/lost_password_send_code_to"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_mail_lost_pass" />

    <Button
        android:id="@+id/btn_send_reset_pass_code"
        android:layout_width="154dp"
        android:layout_height="37dp"
        android:layout_marginEnd="115dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/green_button_background"
        android:text="@string/lost_password_send_code"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_text_username" />

</android.support.constraint.ConstraintLayout>